seperate branch with custom ui. added buttons and functioning game logic for those buttons.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="rockpaperscissor.js"></script>
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-
+  <h1 class="header">Rock Paper Scissors</h1>
+  <h2 class="winner"></h2>
+  <div class="buttons">
+    <button class="rockButton">
+      <p>Rock</p>
+    </button>
+    <button class="paperButton"><p>Paper</p></button>
+    <button class="scissorButton"><p>Scissor</p></button>
+  </div>
+  <div class="scoreBoard">
+    <h6 class="human"></h6>
+    <h6 class="Computer"></h6>
+  </div>
 </body>
 </html>
